--- a/package.json
+++ b/package.json
@@ -20,7 +20,10 @@
   },
   "homepage": "https://github.com/osekman/yedas-todo-app#readme",
   "dependencies": {
+    "bcrypt": "^5.1.1",
     "express": "^4.21.2",
-    "mongodb": "^6.13.0"
+    "jsonwebtoken": "^9.0.2",
+    "mongodb": "^6.13.0",
+    "uuid": "^11.0.5"
   }
 }
